# hackathon2-phase-II

./: .gitignore  README.md  VERCEL_DEPLOYMENT.md  final_test.py  package-lock.json  package.json  quick_test.py  test_api.py  test_auth.py
.claude/agents/: auth-security-validator.md  fastapi-backend-architect.md  neon-db-optimizer.md  nextjs-validation-agent.md
.claude/skills/auth-skill/: SKILL.md
backend/: .env.test  README.md  alembic.ini  pyproject.toml  run_tests.py  test.db
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/routes/: auth.py  tasks.py  utils.py
backend/src/core/: config.py  security.py
backend/src/db/: session.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 20260202204628_create_task_table.py  26a5f5175a71_create_task_table.py
backend/src/models/: task.py
backend/src/services/: task_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_isolation.py  test_jwt_security.py  test_task_ownership.py  test_tasks.py
frontend/: package-lock.json  package.json  playwright.config.js
frontend/e2e/: example.spec.ts
frontend/playwright-report/: index.html
frontend/src/: middleware.ts
frontend/src/app/: globals.css  (+2 more)
specs/001-todo-web-app/: plan.md
specs/002-api-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-security-testing-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+46 files in other folders)
